--- a/src/app/views/pages/job-details/job-details.component.html
+++ b/src/app/views/pages/job-details/job-details.component.html
@@ -9,8 +9,7 @@
       style="padding: 15px 25px;">
       <div
         class="contentEdit"
-        contenteditable
-        (input)="onNameChange($event.target.innerHTML)">
+        contenteditable>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio enim illo quod sed voluptas esse quae fugiat, eius nostrum, vero ab labore necessitatibus unde, repellendus ut aspernatur nisi deleniti cumque.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio enim illo quod sed voluptas esse quae fugiat, eius nostrum, vero ab labore necessitatibus unde, repellendus ut aspernatur nisi deleniti cumque.
       </div>
