bind data with job table

--- a/src/app/views/pages/auth/login/login.component.html
+++ b/src/app/views/pages/auth/login/login.component.html
@@ -18,7 +18,7 @@
       <h3>Sign In</h3>
     </div>
 
-    <kt-auth-notice></kt-auth-notice>
+    <!-- <kt-auth-notice></kt-auth-notice> -->
 
     <!-- begin::Form -->
     <form
