--- a/src/app/views/pages/auth/register/register.component.html
+++ b/src/app/views/pages/auth/register/register.component.html
@@ -11,7 +11,7 @@
 		<form class="kt-login__form kt-form" [formGroup]="registerForm" autocomplete="off">
 			<div class="form-group">
 				<mat-form-field>
-					<mat-label>Fullname</mat-label>
+					<mat-label>Full Name</mat-label>
 					<input matInput type="text" placeholder="Fullname" formControlName="fullname"/>
 					<mat-error *ngIf="isControlHasError('fullname','required')">
 						<strong>{{ 'AUTH.VALIDATION.REQUIRED_FIELD' | translate }}</strong>
@@ -42,7 +42,7 @@
 					</mat-error>
 				</mat-form-field>
 			</div>
-			<div class="form-group">
+			<!-- <div class="form-group">
 				<mat-form-field>
 					<mat-label>Username</mat-label>
 					<input matInput type="text" placeholder="Username" formControlName="username"/>
@@ -56,7 +56,7 @@
 						<strong>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</strong>
 					</mat-error>
 				</mat-form-field>
-			</div>
+			</div> -->
 			<div class="form-group">
 				<mat-form-field>
 					<mat-label>{{ 'AUTH.INPUT.PASSWORD' | translate }}</mat-label>
