--- a/src/app/views/pages/job-details/job-details.component.html
+++ b/src/app/views/pages/job-details/job-details.component.html
@@ -1,20 +1,138 @@
-<div class="col-xl-12">
-  <kt-portlet [class]="'kt-portlet--height-fluid'">
-    <kt-portlet-header
-      [title]="'Job Description'"
-      [class]="'kt-portlet__head--lg kt-portlet__head--noborder kt-portlet__head--break-sm'">
-    </kt-portlet-header>
-    <kt-portlet-body
-      [class]="'kt-portlet__body--fit'"
-      style="padding: 15px 25px;">
-      <div
-        class="contentEdit"
-        contenteditable>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio enim illo quod sed voluptas esse quae fugiat, eius nostrum, vero ab labore necessitatibus unde, repellendus ut aspernatur nisi deleniti cumque.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio enim illo quod sed voluptas esse quae fugiat, eius nostrum, vero ab labore necessitatibus unde, repellendus ut aspernatur nisi deleniti cumque.
+<div class="row">
+  <div class="col-xl-12">
+    <p>-----{{jobSimilarityData}}-----</p>
+    <kt-portlet [class]="'kt-portlet--height-fluid'">
+      <!-- <kt-portlet-header
+        [title]="'Job Description'"
+        [class]="'kt-portlet__head--lg kt-portlet__head--noborder kt-portlet__head--break-sm'">
+      </kt-portlet-header> -->
+      <div style="padding: 15px 25px;">
+        <h4 style="margin-top: 15px;">Job Description</h4>
       </div>
-      <h4 style="margin-top: 15px;">Matched Candidate profile</h4>
-      <kt-data-table></kt-data-table>
-    </kt-portlet-body>
-  </kt-portlet>
+      <kt-portlet-body
+        [class]="'kt-portlet__body--fit'"
+        style="padding: 5px 25px 15px 25px;">
+        <div
+          class="contentEdit"
+          contenteditable>
+          {{jobSimilarityData.getJobInfo().getJobId()}}
+        </div>
+        <h4 style="margin-top: 15px;">Matched Candidate profile</h4>
+        <div class="col-xl-12">
+          <table
+            *ngIf="jobSimilarityData"
+            mat-table
+            [dataSource]="jobSimilarityData"
+            class="mat-elevation-z8">
+
+            <!-- - Note that these columns can be defined in any order.
+                            The actual rendered columns are set as a property on the row definition" -->
+
+            <!-- jobCode Column -->
+            <ng-container matColumnDef="jobCode">
+              <th
+                mat-header-cell
+                *matHeaderCellDef>
+                S No.
+              </th>
+              <td
+                mat-cell
+                *matCellDef="let element">
+                {{element.getJobInfo().getJobId()}}
+              </td>
+            </ng-container>
+
+            <!-- jobPosition Column -->
+            <ng-container matColumnDef="jobPosition">
+              <th
+                mat-header-cell
+                *matHeaderCellDef>
+                Candidate Name
+              </th>
+              <td
+                mat-cell
+                *matCellDef="let element">
+                <a
+                  href="javascript:;"
+                  routerLink="/profile">
+                  {{element.jobPosition}}
+                </a>
+              </td>
+            </ng-container>
+
+            <!-- profileMatched Column -->
+            <ng-container matColumnDef="profileMatched">
+              <th
+                mat-header-cell
+                *matHeaderCellDef>
+                Matched Percentage
+              </th>
+
+              <td
+                mat-cell
+                *matCellDef="let element">
+                <!-- <span class="btn btn-label-brand btn-sm btn-upper"> {{element.profileMatched}}%</span> -->
+                <div
+                  class="kt-widget__progress"
+                  style="display: flex;
+                align-items: center;">
+                  <div
+                    class="progress"
+                    style="height: 5px;width: 100%;margin-right: 15px;">
+                    <div
+                      class="progress-bar kt-bg-success"
+                      role="progressbar"
+                      [ngStyle]="{'width': element.profileMatched+'%', 'color': '#858585'}"
+                      aria-valuenow="65"
+                      aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <div class="kt-widget__stats">{{element.profileMatched}}%</div>
+                </div>
+              </td>
+            </ng-container>
+            <!-- profileMatched Column -->
+            <ng-container matColumnDef="actions">
+              <th
+                mat-header-cell
+                *matHeaderCellDef>
+                Actions
+              </th>
+
+              <td
+                mat-cell
+                *matCellDef="let element">
+                <a
+                  class="btn btn-label-brand btn-sm btn-upper"
+                  style="margin-right: 5px;"
+                  href="#">
+                  Call
+                </a>
+                <a
+                  class="btn btn-brand btn-sm btn-upper"
+                  href="mailto:someone@example.com?Subject=Hello%20again"
+                  style="font-weight: 700;">
+                  Email
+                </a>
+              </td>
+            </ng-container>
+
+            <tbody>
+              <tr
+                mat-header-row
+                *matHeaderRowDef="displayedColumns"></tr>
+              <tr
+                mat-row
+                *matRowDef="let row; columns: displayedColumns;"></tr>
+            </tbody>
+          </table>
+          <mat-paginator
+            [length]="100"
+            [pageSize]="10"
+            [pageSizeOptions]="[5, 10, 25, 100]">
+          </mat-paginator>
+        </div>
+      </kt-portlet-body>
+    </kt-portlet>
+  </div>
 </div>
