--- a/src/app/views/pages/job-details/job-details.component.scss
+++ b/src/app/views/pages/job-details/job-details.component.scss
@@ -18,3 +18,14 @@
 div[contenteditable]:focus {
   outline: none;
 }
+
+.btn-label-brand{
+  font-weight: 700;
+}
+td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type, th.mat-header-cell:last-of-type{
+  text-align: center;
+}
+table{
+  width: 100%;
+  box-shadow: none;
+}
