--- a/src/app/views/pages/postjob/postjob.component.html
+++ b/src/app/views/pages/postjob/postjob.component.html
@@ -1,39 +1,39 @@
-<div class="col-xl-12">
-  <kt-portlet [class]="'kt-portlet--height-fluid'">
-    <kt-portlet-header
-      [title]="'Post A Job'"
-      [class]="'kt-portlet__head--lg kt-portlet__head--noborder kt-portlet__head--break-sm'">
-    </kt-portlet-header>
-    <kt-portlet-body [class]="'kt-portlet__body--fit'">
-      <div class="col-lg-12">
-        <form action>
-          <div class="example-container">
-            <mat-form-field appearance="outline">
-              <mat-label>Job Title</mat-label>
-              <input
-                matInput
-                placeholder="Job Title">
-              <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Job Desc</mat-label>
-              <textarea
-                matInput
-                placeholder="Job Desc"
-                rows="15"></textarea>
-            </mat-form-field>
-            <div
-              class
-              style="text-align: right;">
-              <button
-                id="kt_login_signin_submit"
-                class="btn btn-primary btn-elevate kt-login__btn-primary">
-                Create Job
-              </button>
+<div class="row">
+  <div class="col-xl-12">
+    <kt-portlet [class]="'kt-portlet--height-fluid'">
+      <kt-portlet-body
+        [class]="'kt-portlet__body--fit'"
+        style="padding: 25px 15px 15px 15px;">
+        <div class="col-lg-12">
+          <form action>
+            <div class="example-container">
+              <mat-form-field appearance="outline">
+                <mat-label>Job Title</mat-label>
+                <input
+                  matInput
+                  placeholder="Job Title">
+                <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Job Desc</mat-label>
+                <textarea
+                  matInput
+                  placeholder="Job Desc"
+                  rows="15"></textarea>
+              </mat-form-field>
+              <div
+                class
+                style="text-align: right;">
+                <button
+                  id="kt_login_signin_submit"
+                  class="btn btn-label-brand btn-bold">
+                  Create Job
+                </button>
+              </div>
             </div>
-          </div>
-        </form>
-      </div>
-    </kt-portlet-body>
-  </kt-portlet>
+          </form>
+        </div>
+      </kt-portlet-body>
+    </kt-portlet>
+  </div>
 </div>
