--- a/src/app/views/pages/job-details/job-details.component.html
+++ b/src/app/views/pages/job-details/job-details.component.html
@@ -1,13 +1,25 @@
 <div class="row">
   <div class="col-xl-12">
-    <p>-----{{jobSimilarityData}}-----</p>
+    <!-- <table>
+      <tbody>
+        <tr>
+          <th>S.No</th>
+          <th>Candidate Name</th>
+          <th>Matched Percentage</th>
+        </tr>
+        <tr *ngFor="let element of jobSimilarityData.getCandidateInfoList();let i = index">
+          <td>{{ i + 1}}</td>
+          <td>{{element.getCandidateDescription()}}</td>
+          <td>
+            {{element.getSimilarityList()[2].getSimilarity()}}
+          </td>
+        </tr>
+      </tbody>
+    </table> -->
+
     <kt-portlet [class]="'kt-portlet--height-fluid'">
-      <!-- <kt-portlet-header
-        [title]="'Job Description'"
-        [class]="'kt-portlet__head--lg kt-portlet__head--noborder kt-portlet__head--break-sm'">
-      </kt-portlet-header> -->
       <div style="padding: 15px 25px;">
-        <h4 style="margin-top: 15px;">Job Description</h4>
+        <h4 style="margin-top: 15px;">Job Description - {{jobData.getJobInfo().getJobId()}}</h4>
       </div>
       <kt-portlet-body
         [class]="'kt-portlet__body--fit'"
@@ -15,19 +27,14 @@
         <div
           class="contentEdit"
           contenteditable>
-          lorem
+          {{jobData.getJobInfo().getJobDescription()}}
         </div>
         <h4 style="margin-top: 15px;">Matched Candidate profile</h4>
         <div class="col-xl-12">
           <table
             mat-table
-            [dataSource]="dataSource"
+            [dataSource]="jobSimilarityData"
             class="mat-elevation-z8">
-
-            <!-- - Note that these columns can be defined in any order.
-                            The actual rendered columns are set as a property on the row definition" -->
-
-            <!-- jobCode Column -->
             <ng-container matColumnDef="jobCode">
               <th
                 mat-header-cell
@@ -36,12 +43,11 @@
               </th>
               <td
                 mat-cell
-                *matCellDef="let element">
-                {{element.jobCode}}
+                *matCellDef="let element: let i = index;">
+                {{i + 1}}
               </td>
             </ng-container>
 
-            <!-- jobPosition Column -->
             <ng-container matColumnDef="jobPosition">
               <th
                 mat-header-cell
@@ -54,12 +60,11 @@
                 <a
                   href="javascript:;"
                   routerLink="/profile">
-                  {{element.jobPosition}}
+                  {{element.getCandidateDescription()}}
                 </a>
               </td>
             </ng-container>
 
-            <!-- profileMatched Column -->
             <ng-container matColumnDef="profileMatched">
               <th
                 mat-header-cell
@@ -70,7 +75,6 @@
               <td
                 mat-cell
                 *matCellDef="let element">
-                <!-- <span class="btn btn-label-brand btn-sm btn-upper"> {{element.profileMatched}}%</span> -->
                 <div
                   class="kt-widget__progress"
                   style="display: flex;
@@ -86,11 +90,12 @@
                       aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <div class="kt-widget__stats">{{element.profileMatched}}%</div>
+                  <div class="kt-widget__stats">
+                    {{element.getSimilarityList()[2].getSimilarity()}}%
+                  </div>
                 </div>
               </td>
             </ng-container>
-            <!-- profileMatched Column -->
             <ng-container matColumnDef="actions">
               <th
                 mat-header-cell
